// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots InlineNotification Default 1`] = `
<p
  className="sc-bxivhb eEGBVx"
>
  <span
    className="sc-htpNat iOQqef"
  >
    <span
      className="sc-htpNat bSPlmE"
    >
      <span
        aria-hidden={true}
        className="sc-iwsKbI jSMqMr"
        dangerouslySetInnerHTML={
          Object {
            "__html": "test-file-stub",
          }
        }
        role="img"
      />
    </span>
    <span
      className="sc-htpNat iOQqef"
    >
      Something is wrong!
    </span>
  </span>
</p>
`;

exports[`Storyshots InlineNotification With children 1`] = `
<p
  className="sc-bxivhb fhwEDr"
>
  <span
    className="sc-htpNat iOQqef"
  >
    <span
      className="sc-htpNat bSPlmE"
    >
      <span
        aria-hidden={true}
        className="sc-iwsKbI jSMqMr"
        dangerouslySetInnerHTML={
          Object {
            "__html": "test-file-stub",
          }
        }
        role="img"
      />
    </span>
    <span
      className="sc-htpNat iOQqef"
    >
      Are you having trouble? Check out 
      <a
        className="sc-iAyFgw gqgAvO"
        href="http://google.com"
        target={undefined}
        title="some resource"
      >
        this
      </a>
       resource for more info.
    </span>
  </span>
</p>
`;

exports[`Storyshots InlineNotification With overwritten Icon 1`] = `
<p
  className="sc-bxivhb eEGBVx"
>
  <span
    className="sc-htpNat iOQqef"
  >
    <span
      className="sc-htpNat bSPlmE"
    >
      <span
        aria-hidden={true}
        className="sc-iwsKbI jSMqMr"
        dangerouslySetInnerHTML={
          Object {
            "__html": "test-file-stub",
          }
        }
        role="img"
      />
    </span>
    <span
      className="sc-htpNat iOQqef"
    >
      Something is wrong!
    </span>
  </span>
</p>
`;
